test/fails/bad_generics/bounds1.lgl
bool uninvokable<`t : vec<2>>(`t x) {
    return x && true; // Doesn't typecheck
}

void main() {
    print 1;
}